syntax = "proto3";

package service;

option go_package = "./gen/service";

service Todo {
    rpc Signup (SignupReq) returns (SignupResp) {}
    rpc GetTodo (GetTodoReq) returns (GetTodoResp) {}
}  

message SignupReq {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message SignupResp {
    string accessJWT = 1;
}

message GetTodoReq {}

message GetTodoResp {
    repeated Task tasks = 1;
}

message Task {
    string title = 1;
    string description = 2;
}